Mon Mar  2 11:43:07 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_REPLACE_TYPE): restore unsigned type from
	  cached variable.

Mon Mar  2 06:01:41 2015  Eric Wong  <e@80x24.org>

	* ext/io/wait/wait.c (io_nread): wrap return value with INT2FIX
	  Thanks to Yura Sokolov <funny.falcon@gmail.com>
	  [ruby-core:68369] [Bug#10923]
	* test/io/wait/test_io_wait.rb (test_nread_buffered):
	  fix broken test

Sun Mar  1 20:21:16 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_REPLACE_TYPE): restore convertible type from
	  cached variable, so that configured results will be stable.

Sun Mar  1 18:10:34 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (rb_cv_broken_memmem): check before adding the
	  result HAVE_MEMMEM macro to confdefs.h, so that configured
	  results will be stable.

Sun Mar  1 11:17:56 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (id2ref): prohibit from accessing internal objects.
	  [ruby-core:68348] [Bug #10918]

Sun Mar  1 09:06:11 2015  Tanaka Akira  <akr@fsij.org>

	* lib/time.rb (strptime): Support %s.%N.
	  [ruby-core:68301] [Bug #10904] Patch by Sadayuki Furuhashi.

Sat Feb 28 17:18:39 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enum.c (enum_each_slice, enum_each_cons): limit elements size by
	  the enumerator size.  suggested by Hans Mackowiak <hanmac AT
	  gmx.de> at [ruby-core:68335]

Sat Feb 28 15:44:20 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_dump.c (rb_vm_bugreport): get rid of making new strings
	  inside signal context.

	* variable.c (rb_tmp_class_path): defer making temporary class
	  path string.

	* variable.c (rb_search_class_path): search class path or return
	  Qnil or Qfalse if unnamed, not creating a temporary path.

Sat Feb 28 15:02:02 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* variable.c (rb_tmp_class_path): preserve name encoding of an
	  anonymous instance of module/class subclass.
